GovCloud/SecurityGroup_v1.yml
AWSTemplateFormatVersion: 2010-09-09

Description: Create a Security Group with port 443, 22, 3389 open and new Network ACL.  Only allows access from ASMR Public IP.

Parameters:
  SecurityGroupName:
    Type: String
    Default: "mySecurityGroup"
    Description: Enter SecurityGroup Name
  SecurityGroupDescription:
    Type: String
    Default: "mySGDescription"
    Description: Enter description of Security Group
  NewNetworkACL:
    Type: String
    Default: 'myNACL'
    Description: Enter NACL Name
  Subnet1:
    Type: 'AWS::EC2::Subnet::Id'
    Default: 'mySubnet1'
    Description: Select a subnet to be associated NACL
  Subnet2:
    Type: 'AWS::EC2::Subnet::Id'
    Default: 'mySubnet2'
    Description: Select a subnet to be associated NACL

  VPC:
    Type: 'AWS::EC2::VPC::Id'
    Description:  Select VPC ID
  
Resources:
  SecurityGroup1:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupName: !Ref SecurityGroupName
      GroupDescription: !Ref SecurityGroupDescription
      VpcId: !Ref VPC
  
  AllowPort443:
    Type: AWS::EC2::SecurityGroupIngress
    DependsOn: 'SecurityGroup1'
    Properties:
      GroupId: !Ref SecurityGroup1
      IpProtocol: 'tcp'
      FromPort: 443
      ToPort: 443
      CidrIp: '70.182.185.128/25'
      Description: 'Allows access from ASMR Public IP'
  AllowPort22:
    Type: AWS::EC2::SecurityGroupIngress
    DependsOn: 'SecurityGroup1'
    Properties:
      GroupId: !Ref SecurityGroup1
      IpProtocol: 'tcp'
      FromPort: 22
      ToPort: 22
      CidrIp: '70.182.185.128/25'
      Description: 'Allows access from ASMR Public IP'
  AllowPort3389:
    Type: AWS::EC2::SecurityGroupIngress
    DependsOn: 'SecurityGroup1'
    Properties:
      GroupId: !Ref SecurityGroup1
      IpProtocol: 'tcp'
      FromPort: 3389
      ToPort: 3389
      CidrIp: '70.182.185.128/25'
      Description: 'Allows access from ASMR Public IP'
  
  NetworkAcl01:
    Type: AWS::EC2::NetworkAcl
    Properties:
      Tags:
        -
          Key: Name
          Value: !Ref NewNetworkACL
      VpcId: !Ref VPC

  SubnetAssociation1:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref Subnet1
      NetworkAclId: !Ref NetworkAcl01
  SubnetAssociation2:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties:
      SubnetId: !Ref Subnet2
      NetworkAclId: !Ref NetworkAcl01
  
  NACLRule:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      NetworkAclId: !Ref NetworkAcl01        
      RuleNumber: '100'
      Protocol: "-1"
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 0.0.0.0/0
      Icmp:
        Code: "-1"
        Type: "-1"
      # PortRange:
      #   From: '53'
      #   To: '53'

Outputs:
  SecurityGroupID:
    Description: Security Group ID assigned to the VPC.
    Value: !Ref SecurityGroup1
    Export:
      Name: !Sub "${AWS::StackName}-SecurityGroupID"
  NewNetworkAcl:
    Description: Network ACL ID assigned to the VPC.
    Value: !Ref NetworkAcl01
    Export: 
      Name: !Sub "${AWS::StackName}-NewNetworkAcl" 

  # Omitted for future use.
